# light_skillhub

./: .gitignore  README.md  sync.sh
skills/agentmemory-mcp/: SKILL.md
skills/china-network-mirrors/: SKILL.md
skills/chinese-messaging-platforms/: SKILL.md
skills/external-agent-coordination/: SKILL.md
skills/hermes-ops/: SKILL.md
skills/html-ppt/: README.md  SKILL.md  _meta.json
skills/inference-precision-tensor-dump-compare/: SKILL.md
skills/inferencex-report/: SKILL.md
skills/mindspeed-mm-train-profiler/: SKILL.md
skills/paper-deep-read/: README.md  _meta.json  pyproject.toml  requirements.txt
skills/paper-deep-read/adapters/: __init__.py
skills/paper-deep-read/adapters/autogen/: tools.py
skills/paper-deep-read/adapters/claude/: CLAUDE.md
skills/paper-deep-read/adapters/coze/: prompt.md
skills/paper-deep-read/adapters/crewai/: agent.py
skills/paper-deep-read/adapters/dify/: README.md  instructions.md
skills/paper-deep-read/adapters/dify/tools/: parse_pdf.py
skills/paper-deep-read/adapters/langchain/: tools.py
skills/paper-deep-read/adapters/openai_assistants/: assistant.py
skills/paper-deep-read/adapters/openai_custom_gpt/: instructions.md
skills/paper-deep-read/adapters/workbuddy/: SKILL.md
skills/paper-deep-read/paper_deep_read/: __init__.py  __main__.py  parser.py  prompts.py  schemas.py
skills/paper-deep-read/templates/: layer1_overview.md  layer2_method.md  layer3_innovation.md
skills/ppt-forge/: 01-style-tile.md  02-slide-authoring.md  03-visual-review.md  04-delivery.md  SKILL.md
skills/remote-npu-test/: SKILL.md
(+40 files in other folders)
