[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "paper-deep-read"
version = "1.0.0"
description = "Cross-platform academic paper deep reading toolkit with PDF parsing, quality assessment, and three-layer analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Paper Deep Read Contributors"}]
keywords = ["academic", "paper", "analysis", "pdf", "rag", "llm", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]
langchain = ["langchain-core>=0.1.0", "langchain-openai>=0.1.0", "pydantic>=2.0"]
openai = ["openai>=1.0"]
dify = ["pydantic>=2.0"]
autogen = ["autogen-agentchat>=0.2"]
crewai = ["crewai>=0.1"]

[project.scripts]
paper-deep-read = "paper_deep_read.parser:main"

[tool.setuptools.packages.find]
include = ["paper_deep_read*"]
